Fixed overflow on smaller screens
Made it look better on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -118,22 +118,24 @@ Lightbox
 ======================*/
 
 
+
 #lightbox {
   background: rgba(0,0,0,0.9);
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   display: none;
   text-align: center;
+  overflow: auto;
   z-index: 6;
 }
 
 #lightbox img {
-  margin-top: 10%;
-  max-width: 900px;
-  max-height: 600px;
+  margin-top: 7%;
+  max-width: 80%;
+  max-height: 50%;
 }
 
 #lightbox p {
@@ -177,18 +179,18 @@ Media Queries
 	#prev,
 	#next {
 		position: absolute;
-		top: 58%;
+		top: 65%;
 		cursor: pointer;
 		z-index: 10;
 		display: none;
 	}
 
 	#prev {
-		left: 25%;
+		left: 30%;
 	}
 
 	#next {
-		right: 25%;
+		right: 30%;
 	}
 
 } 
